# Graphic-Library-Course

./: .gitignore  ExamPratique_Fetra.7z  Graphic-Library.sln  README.md
1-Save-Load-GameObjects/: sav.game
10-Opengl-City-Boxes/: 10-Opengl-City-Boxes.vcxproj  10-Opengl-City-Boxes.vcxproj.filters  Utils.h  main.cpp
10-Opengl-City-Boxes/levelObjects/: Level.h  LevelManager.h
11-Opengl-Box-Driving/: Transform.h
12-Trump-Coin-Collector-Game/: 12-Trump-Coin-Collector-Game.vcxproj  12-Trump-Coin-Collector-Game.vcxproj.filters  Coin.cpp  Coin.h  TextPrinter.cpp  TextPrinter.h  main.cpp
13-Opengl-Exam/: 13-Opengl-Exam.vcxproj  Box.cpp  Box.h  BoxSpawner.cpp  BoxSpawner.h  Platform.cpp  Platform.h  SkyBox.cpp  SkyBox.h  Utils.cpp  Utils.h  main.cpp
14-Brute-Follower-AI/: 14-Brute-Follower-AI.vcxproj  14-Brute-Follower-AI.vcxproj.filters  Enemy.cpp  Enemy.h  main.cpp
14-Brute-Follower-AI/Utilities/: Transform.h
2-Image-Manager/: 2-Image-Manager.vcxproj  Image.cpp
3-Random-Black-White-Box-Generator/: 3-Random-Black-White-Box-Generator.vcxproj  Numbers.h  binary.txt  main.cpp
4-Paint/: 4-Paint.vcxproj  main.cpp
5-Image-Zoom/: 5-Image-Zoom.vcxproj  5-Image-Zoom.vcxproj.filters  main.cpp
6-Moving-Character-Sprite/: 6-Moving-Character-Sprite.vcxproj
7-Space-Invaders/: 7-Space-Invaders.vcxproj  7-Space-Invaders.vcxproj.filters  main.cpp
7-Space-Invaders/assets/: binary.txt
7-Space-Invaders/gameObjects/: Player.h  Spaceship.h
7-Space-Invaders/levelObjects/: Level.h
8-Opengl-Tractor-Object/: 8-Opengl-Tractor-Object.vcxproj
9-Opengl-House-Object/: 9-Opengl-House-Object.vcxproj
AnimatedBoxes/: AnimatedBoxes.vcxproj.filters  Transform.cpp  Transform.h  Utils.h  main.cpp
Display-FPS-With-TTF/: Display-FPS-With-TTF.vcxproj
Exo1Jour1/: GameObject.h  main.cpp
Exo1Jour2/: CMakeLists.txt
Exo1Jour2/src/: main.cpp
Exo2Jour1/: CMakeLists.txt  Image.h
Graphic-Library/1-Save-Load-GameObjects/: 1-Save-Load-GameObjects.vcxproj  1-Save-Load-GameObjects.vcxproj.filters  GameObject.h  main.cpp
Graphic-Library/10-Opengl-City-Boxes/: 10-Opengl-City-Boxes.vcxproj  10-Opengl-City-Boxes.vcxproj.filters  Transform.h
Graphic-Library/11-Opengl-Box-Driving/: 11-Opengl-Box-Driving.vcxproj  main.cpp
Graphic-Library/12-Trump-Coin-Collector-Game/: 12-Trump-Coin-Collector-Game.vcxproj.filters  Trump.cpp  Trump.h  main.cpp
Graphic-Library/13-Opengl-Exam/: 13-Opengl-Exam.vcxproj.filters  BoxSpawner.cpp  Platform.cpp  Platform.h  SkyBox.h  Utils.cpp  main.cpp
Graphic-Library/2-Image-Manager/: 2-Image-Manager.vcxproj.filters  Image.h  main.cpp
Graphic-Library/3-Random-Black-White-Box-Generator/: 3-Random-Black-White-Box-Generator.vcxproj.filters  FileManager.cpp  FileManager.h  Numbers.cpp
Graphic-Library/6-Moving-Character-Sprite/: 6-Moving-Character-Sprite.vcxproj.filters  main.cpp
Graphic-Library/8-Opengl-Tractor-Object/: main.cpp
Graphic-Library/AnimatedBoxes/: Utils.h  (+2 more)
J03ExamPratiqueOpenGl_Fetra/: CMakeLists.txt
Mini-Box-Avoiding-Game/: Mini-Box-Avoiding-Game.vcxproj.filters  Player.cpp  TextPrinter.cpp  TextPrinter.h
Moving-Box/: Carre.cpp  main.cpp
Opengl-Demo/: main.cpp
Random-Boxes/: Random-Boxes.vcxproj  main.cpp
Tiled-Background/: Tiled-Background.vcxproj.filters  main.cpp
exos-classe/SDL/: CMakeLists.txt
exos-classe/SDL/src/: main.cpp
exos-classe/labProjet3/: CMakeLists.txt
exos-classe/labProjet3/src/: Mur.cpp  Player.cpp  Player.h  main.cpp
exos-classe/labProjet4/: CMakeLists.txt
exos-classe/labProjet4/src/: Mur.cpp  Mur.h  Player.cpp  Player.h  TextPrinter.cpp  TextPrinter.h  main.cpp
exos-maison/Exo2Jour2/: CMakeLists.txt
exos-maison/Exo2Jour2/src/: main.cpp
exos-maison/Exo3Jour3 (Space Invaders)/: CMakeLists.txt
exos-maison/Exo3Jour3 (Space Invaders)/src/: main.cpp
exos-maison/Exo3Jour3 (Space Invaders)/src/gameObjects/: Enemy.cpp  Enemy.h  Player.cpp  Player.h  Spaceship.cpp  Spaceship.h
exos-maison/Exo3Jour3 (Space Invaders)/src/levelObjects/: LevelManager.cpp  LevelManager.h
(+407 files in other folders)
